ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/Blocks/parserErrorRecovery_Block3/input.ts.stderr
error: 'implements', 'interface', 'let', 'package', 'private', 'protected',  'public', 'static', or 'yield' cannot be used as an identifier in strict mode
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/Blocks/parserErrorRecovery_Block3/input.ts:4:5
  |
4 |     private b(): boolean {
  |     ^^^^^^^

error: Expected ';', '}' or <eof>
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/Blocks/parserErrorRecovery_Block3/input.ts:4:13
  |
4 |     private b(): boolean {
  |             ^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/Blocks/parserErrorRecovery_Block3/input.ts:4:5
  |
4 |     private b(): boolean {
  |     ^^^^^^^

error: Expected ';', '}' or <eof>
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/Blocks/parserErrorRecovery_Block3/input.ts:4:16
  |
4 |     private b(): boolean {
  |                ^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/Blocks/parserErrorRecovery_Block3/input.ts:4:13
  |
4 |     private b(): boolean {
  |             ^^^

error[1128]: Declaration or statement expected
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/Blocks/parserErrorRecovery_Block3/input.ts:4:16
  |
4 |     private b(): boolean {
  |                ^

error: Expected ';', '}' or <eof>
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/Blocks/parserErrorRecovery_Block3/input.ts:4:26
  |
4 |     private b(): boolean {
  |                          ^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/Blocks/parserErrorRecovery_Block3/input.ts:4:18
  |
4 |     private b(): boolean {
  |                  ^^^^^^^

error: Expected }, got <eof>
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/Blocks/parserErrorRecovery_Block3/input.ts:6:1
  |
6 | }
  | ^

